Added support for run configurations. Added support for running commands before or after IDEA compilation.